WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205014
[LFC][IFC] fix fast/text/simple-lines-multiple-renderers-break.html
https://bugs.webkit.org/show_bug.cgi?id=205014
Summary
[LFC][IFC] fix fast/text/simple-lines-multiple-renderers-break.html
alan
Reported
2019-12-09 09:48:45 PST
ssia
Attachments
Patch
(12.07 KB, patch)
2019-12-09 10:18 PST
,
alan
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-12-09 09:49:16 PST
<
rdar://problem/57756348
>
alan
Comment 2
2019-12-09 10:18:58 PST
Created
attachment 385165
[details]
Patch
Antti Koivisto
Comment 3
2019-12-09 10:23:40 PST
Comment on
attachment 385165
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=385165&action=review
> Source/WebCore/ChangeLog:9 > + When dealing with series of runs (<span>text</span><span>content</text>) a partial content does not
Closing <span> with </text>
> Source/WebCore/layout/inlineformatting/InlineFormattingContext.cpp:114 > - partialLeadingContentLength = lineContent.partialContent->overlfowContentLength; > + partialLeadingContentLength = lineContent.partialContent->overflowContentLength;
Who reviews this stuff :(
alan
Comment 4
2019-12-09 10:24:21 PST
(In reply to Antti Koivisto from
comment #3
)
> Comment on
attachment 385165
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=385165&action=review
> > > Source/WebCore/ChangeLog:9 > > + When dealing with series of runs (<span>text</span><span>content</text>) a partial content does not > > Closing <span> with </text>
lol
alan
Comment 5
2019-12-09 10:35:05 PST
Committed
r253294
: <
https://trac.webkit.org/changeset/253294
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug